[tool.poetry]
name = "blackout"
version = "0.0.1"
description = ""
authors = [
    "Owen Saunders <owen.saund>",
    "Cesar Angelese <cesar.angeles@hotmail.es>"
]
license = "Proprietary"
classifiers = [
    "Private :: Do Not Upload",
]

packages = [
    { include = "api" },
    { include = "run.py" },
    { include = "manage.py" },
]

[tool.poetry.dependencies]
bjoern = { version = "^3.1.0", optional = true }
Django = "^5.1.2"
django-cors-headers = "4.5.0"
django-filter = "^24.3"
djangorestframework = "^3.15.0"
python = "^3.12"
pytz = "2024.2"
PyYAML = "^6.0.2"
uritemplate = "^4.1.1"
coverage = "^7.6.4"
psycopg2-binary = "^3.2.3"
lxml = "^5.3.0"

[tool.poetry.dev-dependencies]
black = "^24.10.0"
unittest-xml-reporting = "^3.2.0"

[tool.poetry.scripts]
app = 'run:main'
admin = 'manage:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
